--- a/requirements.txt
+++ b/requirements.txt
@@ -61,8 +61,8 @@ ftfy
 piexif
 nvidia-ml-py 
 misaki
-gitdb>=4.0.11
-gitpython>=3.1.44
+gitdb==4.0.12 
+gitpython==3.1.45
 
 # Optional / commented out
 # transformers==4.46.3  # for llamallava pre-patch
